# q-lang

./: CAPTAINS_LOG.md  Cargo.toml  DESIGN.md  GOALS.md  main.q  rust-toolchain.toml
boot/: Cargo.toml  README.md  grammar.lalrpop  grammar.rs  main.rs  output  output-002112  output-00211200  output-2112  output.ll  output.s  test.wasm
cli/: Cargo.toml  environment.rs  interpreter.rs  main.rs
core/: Cargo.toml  diagnostic.rs
macros/: Cargo.toml
parser/: Cargo.toml  error.rs  lib.rs  parser.rs  parsetree.rs  token.rs
spec/: dune  dune-project  q.ml  typer.ml  typing.ml
src/: diagnostic.rs  environment.rs  error.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  parsetree.rs  token.rs
typer/: Cargo.toml
