[package]
name = "q-parser"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
q-core = {path="../core",version="*"}

logos.workspace = true
miette.workspace = true
thiserror.workspace = true
